--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
           <div class="news-block col-lg-4 col-md-6 col-sm-12">
             <div class="inner-box wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
               <div class="image">
-                <img src="./workshop.jpg" alt="" />
+                <img src="./workshop.jpg" alt="" style="height: 600px; width: 700px;" />
                 <!-- <img src="./workshop.jpg" alt=""> -->
               </div>
               <!-- <div class="lower-content">
@@ -846,7 +846,7 @@
 
     
 
-    <section class="sponsors-section-two" style="display: none;">
+    <section class="sponsors-section-two" >
 
       <!-- Side Icons -->
       <div class="auto-container">
@@ -858,16 +858,16 @@
           <div class="separator"></div>
         </div>
 
-        <div class="sponsors-list" style="display: flex; align-items: center; justify-content: center;">
+        <div class="sponsors-list" style="display: flex; align-items: center; justify-content: center; gap: 50px;">
           <!-- remove inline css when you remove tbd code -->
           <div class="centered m-1">
             <!-- <a href="https://sceecssc.onrender.com/" target="_blank"><img src="images/ssclogo.png"></a> -->
-            <h2 class="centered mt-2" style="color: #222222; font-weight:700;">The SCEECS Student Club</h2>
-            <h4>- the official sponsor of SCEECS organized by IEEE MANIT STUDENT BRANCH</h4>
+            <!-- <h2 class="centered mt-2" style="color: #222222; font-weight:700;">The SCEECS Student Club</h2>
+            <h4>- the official sponsor of SCEECS organized by IEEE MANIT STUDENT BRANCH</h4> -->
           </div>
-          <!-- <a href="https://www.geeksforgeeks.org/"><img src="images/clients/GFG logo.png" alt="" /></a>
-          <a href="https://talerang.com/"><img src="images/clients/Talerang.png" alt="" /></a>
-          <a href="https://www.interviewcake.com/assets"><img src="images/clients/interview_cake.png" alt=""></a> -->
+          
+          <a href="https://talentbattle.in"><img src="images/clients/talent_battle_logo.png" alt="" style="height: 200px;"></a>
+          <a href="https://www.interviewcake.com/assets"><img src="images/clients/interview_cake.png" alt=""></a>
         </div>
       </div>
     </section>
