--- a/index.html
+++ b/index.html
@@ -963,10 +963,10 @@
             <!--Tab Btns-->
             <ul class="tab-btns tab-buttons clearfix">
               <li data-tab="#day-one" class="tab-btn active-btn">
-                Day 1 <span>TBD</span>
+                Day 1 <span>24th February</span>
               </li>
               <li data-tab="#day-two" class="tab-btn">
-                Day 2 <span>TBD</span>
+                Day 2 <span>25th February</span>
               </li>
             </ul>
 
@@ -1011,8 +1011,8 @@
                               INAUGRATION CEREMONY
                             </h2>
                             <div class="name">Inauguration of SCEECS'24 and welcome address.</div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 10:30 AM ONWARDS</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL AUDTORIUM</div>
                           </div>
                         </div>
                       </div>
@@ -1020,7 +1020,8 @@
                   </div>
 
                   <!-- Event block -->
-                  <div class="event-block">
+                  <!-- DISPLAY NONE -->
+                  <div class="event-block" style="display: none;">
                     <div class="inner-box">
                       <div class="row clearfix">
                         <!-- Image Column -->
@@ -1101,8 +1102,8 @@
                             <div class="text">
                               Conference Session - 1
                             </div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 11:45 AM - 1:45 AM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL DEPARTMENT</div>
                           </div>
                         </div>
                       </div>
@@ -1146,8 +1147,8 @@
                             <div class="text">
                               Conference Session - 2
                             </div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 2:45 PM - 5:00 PM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL DEPARTMENT</div>
                           </div>
                         </div>
                       </div>
@@ -1167,7 +1168,7 @@
                                 <div class="overlay-inner">
                                   <div class="content">
                                     <h3>
-                                      <a href="callforpaper.html">TBD</a>
+                                      <a href="callforpaper.html">WORKSHOP</a>
                                     </h3>
                                   </div>
                                 </div>
@@ -1186,13 +1187,13 @@
                           <div class="inner-column">
                             <!-- <div class="name">SCEECS 2024</div> -->
                             <h2>
-                              <a href="workshop.html">TBD</a>
+                              <a href="#">WORKSHOP</a>
                             </h2>
                             <div class="text">
-                              TBD
+                              WORKSHOP SESSION 1
                             </div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 11:45 AM - 2:00 PM</div>
+                            <div class="text font-weight-bold">VENUE: ELECTRICAL AUDITORIUM</div>
                           </div>
                         </div>
                       </div>
@@ -1212,7 +1213,7 @@
                                 <div class="overlay-inner">
                                   <div class="content">
                                     <h3>
-                                      <a href="workshop.html">TBD</a>
+                                      <a href="#">WORKSHOP</a>
                                     </h3>
                                   </div>
                                 </div>
@@ -1231,13 +1232,13 @@
                           <div class="inner-column">
                             <!-- <div class="name">SCEECS 2024</div> -->
                             <h2>
-                              <a href="workshop.html">TBD</a>
+                              <a href="#">WORKSHOP</a>
                             </h2>
                             <div class="text">
-                              TBD
+                              WORKSHOP SESSION 2
                             </div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 2:30 PM - 6:00 PM</div>
+                            <div class="text font-weight-bold">VENUE: ELECTRICAL AUDITORIUM</div>
                           </div>
                         </div>
                       </div>
@@ -1264,54 +1265,7 @@
                                 <div class="overlay-inner">
                                   <div class="content">
                                     <h3>
-                                      <a href="callforpaper.html">TBD</a>
-                                    </h3>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="event-time">
-                              --- <br />
-                              --- <br />
-                              --- <br />
-                              ---
-                            </div>
-                          </div>
-                        </div>
-                        <!-- Info Column -->
-                        <div class="info-column col-lg-7 col-sm-12 col-md-12">
-                          <div class="inner-column">
-                            <!-- <div class="name">SCEECS 2024</div> -->
-                            <h2>
-                              <a href="workshop.html">TBD</a>
-                            </h2>
-                            <div class="text">
-                              TBD
-                            </div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-
-
-                  <div class="event-block">
-                    <div class="inner-box">
-                      <div class="row clearfix">
-                        <!-- Image Column -->
-                        <div class="image-column col-lg-5 col-sm-12 col-md-12">
-                          <div class="inner-column">
-                            <div class="image">
-                              <img src="images/resource/event-1.jpg" alt="" />
-                              <!--Overlay Box-->
-                              <div class="overlay-box">
-                                <div class="overlay-inner">
-                                  <div class="content">
-                                    <h3>
-                                      <a href="callforpaper.html">Research Paper Conference</a>
+                                      <a href="callforpaper.html">RESEARCH PAPER CONFERENCE</a>
                                     </h3>
                                   </div>
                                 </div>
@@ -1335,13 +1289,16 @@
                             <div class="text">
                               Conference Session - 3
                             </div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 9:30 AM - 11:00 AM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL DEPARTMENT</div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
+
+
+
                   <div class="event-block">
                     <div class="inner-box">
                       <div class="row clearfix">
@@ -1379,8 +1336,52 @@
                             <div class="text">
                               Conference Session - 4
                             </div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 11:00 AM - 1:00 AM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL DEPARTMENT</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="event-block">
+                    <div class="inner-box">
+                      <div class="row clearfix">
+                        <!-- Image Column -->
+                        <div class="image-column col-lg-5 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <div class="image">
+                              <img src="images/resource/event-1.jpg" alt="" />
+                              <!--Overlay Box-->
+                              <div class="overlay-box">
+                                <div class="overlay-inner">
+                                  <div class="content">
+                                    <h3>
+                                      <a href="#">WORKSHOP</a>
+                                    </h3>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="event-time">
+                              --- <br />
+                              --- <br />
+                              --- <br />
+                              ---
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Info Column -->
+                        <div class="info-column col-lg-7 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <!-- <div class="name">SCEECS 2024</div> -->
+                            <h2>
+                              <a href="#">WORKSHOP</a>
+                            </h2>
+                            <div class="text">
+                              KEYNOTE SESSION 1 BY MR. LAKSHAY KUMAR <br> <span style="font-size: smaller;">(CO-FOUNDER CODEHELP AND CS - ADOBE)</span>
+                            </div>
+                            <div class="text font-weight-bold">TIME: 10:30 AM - 1:00 PM</div>
+                            <div class="text font-weight-bold">VENUE: ELECTRICAL AUDITORIUM</div>
                           </div>
                         </div>
                       </div>
@@ -1400,7 +1401,7 @@
                                 <div class="overlay-inner">
                                   <div class="content">
                                     <h3>
-                                      <a href="speaker.html">GUEST LECTURE</a>
+                                      <a href="speaker.html">WORKSHOP</a>
                                     </h3>
                                   </div>
                                 </div>
@@ -1417,12 +1418,15 @@
                         <div class="info-column col-lg-7 col-sm-12 col-md-12">
                           <div class="inner-column">
                             <h2>
-                              <a href="schedule.html">GUEST LECTURE</a>
+                              <a href="schedule.html">WORKSHOP</a>
                             </h2>
-                            <div class="name">GUEST LECTURE - 2</div>
+                            <div class="name">
+                              KEYNOTE SESSION 2 BY MR. LOVE BABBAR <br> <span style="font-size: smaller;">(FOUNDER CODEHELP)</span>
+
+                            </div>
                             <div class="text"></div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: 1:30 AM - 5:00 PM</div>
+                            <div class="text font-weight-bold">VENUE: ELECTRICAL AUDITORIUM</div>
                           </div>
                         </div>
                       </div>
@@ -1465,8 +1469,8 @@
                               <a href="#">CLOSING CEREMONY</a>
                             </h2>
                             <div class="name">Prize Distribution and valedictory function.</div>
-                            <div class="text font-weight-bold">TIME: TBD</div>
-                            <div class="text font-weight-bold">VENUE: TBD</div>
+                            <div class="text font-weight-bold">TIME: FOLLOWED BY</div>
+                            <div class="text font-weight-bold">VENUE: ELECTRICAL AUDITORIUM</div>
                           </div>
                         </div>
                       </div>
@@ -1476,10 +1480,6 @@
               </div>
             </div>
           </div>
-
-          
-
-          
         </div>
       </div>
     </section>
