changes has been made

--- a/index.html
+++ b/index.html
@@ -354,11 +354,14 @@
             <div class="inner-column">
               <h2>
                 IEEE <br />
-                SCEECS 2024
+                SCEECS 2025
               </h2>
               <div class="text">
-                24th – 25th February 2024, Bhopal, India.
+                coming soon
               </div>
+              <!-- <div class="text">
+                24th – 25th February 2024, Bhopal, India.
+              </div> -->
               <!-- Buttons Box -->
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
