--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 SCEECS 2025
               </h2>
               <div class="text">
-                coming soon
+                18-19 January 2025
               </div>
               <!-- <div class="text">
                 24th – 25th February 2024, Bhopal, India.
