--- a/index.html
+++ b/index.html
@@ -356,12 +356,12 @@
                 IEEE <br />
                 SCEECS 2025
               </h2>
-              <div class="text">
-                18-19 January 2025
-              </div>
-              <!-- <div class="text">
-                24th – 25th February 2024, Bhopal, India.
+<!--               <div class="text">
+                coming soon
               </div> -->
+              <div class="text">
+                18th – 19th January 2025, Bhopal, India.
+              </div>
               <!-- Buttons Box -->
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
