--- a/contact.html
+++ b/contact.html
@@ -344,13 +344,13 @@
 
                     <div class="title-box">
                         <div class="title">A flagship conference by IEEE-MSB</div>
-                        <h2>SCEECS 2024</h2>
+                        <h2>SCEECS 2025</h2>
                     </div>
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download
-                                Brochure</a>
+                            <!-- <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download
+                                Brochure</a> -->
                         </div>
                     </div>
                 </div>
