--- a/callforpaper.html
+++ b/callforpaper.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>SCEECS'24-Call For Paper</title>
+    <title>SCEECS'25-Call For Paper</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
 
@@ -30,10 +30,10 @@
             right: -10px !important; 
         }
         .spcialDottReview{
-            right: -121px !important;
+            right: -85px !important;
         }
         .specialBoxCameraReady{
-            left: -513px !important;
+            left: -420px !important;
         }
         .paperPresentationBox{
             right: -348px !important;
@@ -188,7 +188,7 @@
                 <!-- Sec Title -->
                
                 <div class="sec-title light centered">
-                    <div class="title">SCEECS'24</div>
+                    <div class="title">SCEECS'25</div>
                     <h2 style="color: black">Tracks and Topics</h2>
                     <div class="separator"></div>
                     <div class="title" style="margin-top: 20px; font-size: 20px; ">ORIGINAL AND UNPUBLISHED RESEARCH
@@ -430,7 +430,7 @@
             <div class="auto-container">
                 <!-- Sec Title -->
                 <div class="sec-title centered">
-                    <div class="title">SCEECS'24 Call For Paper</div>
+                    <div class="title">SCEECS'25 Call For Paper</div>
                     <h2>How it Works</h2>
                     <div class="separator"></div>
                 </div>
@@ -443,7 +443,7 @@
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
                                     <div class="program-info">
-                                        REGISTRATION STARTED<span class="time">26 NOV 2023</span><span class="dott spcialDottRegistration"></span>
+                                        REGISTRATION STARTED<span class="time">WILL BE INFORMED</span><span class="dott spcialDottRegistration"></span>
                                     </div>
                                     <h3><a>Get registered on Microsoft CMT.</a></h3>
                                 </div>
@@ -458,7 +458,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                       SUBMIT PAPER<span class="time">30 DEC 2023</span><span class="dott"></span>
+                                       SUBMIT PAPER<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Submit your paper through Microsoft CMT.</a></h3>
                                 </div>
@@ -473,7 +473,7 @@
                                 <div class="content-inner" >
                                     <!-- Program Info -->
                                     <div class="program-info reviewBox" style="padding: 0 4px;">
-                                        REVIEW<span class="time">In Progress</span>
+                                        REVIEW<span class="time">WILL BE INFORMED</span>
                                         <span class="dott spcialDottReview"></span>
                                     </div>
                                     <h3><a>Paper is blind reviewed by experts.</a></h3>
@@ -490,7 +490,7 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info specialBox"  >
-                                        Acceptance Notification<span class="time">15 JAN - 30 JAN 2024</span><span class="dott"></span>
+                                        Acceptance Notification<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Accepted papers will be notified through email.</a></h3>
                                 </div>
@@ -506,7 +506,7 @@
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
                                     <div class="program-info specialBoxCameraReady">
-                                        Camera Ready Submissions<span class="time">Will Be Informed to accepted papers via email.</span><span class="dott" ></span>
+                                        Camera Ready Submissions<span class="time">WILL BE INFORMED</span><span class="dott" ></span>
                                     </div>
                                     <h3><a>Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
                                 </div>
@@ -522,8 +522,7 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info paperPresentationBox"  >
-                                        Paper Presentation<span class="time">24-25 
-                                            February, 2024</span><span class="dott"></span>
+                                        Paper Presentation<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                                 </div>
@@ -542,7 +541,7 @@
                                         PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                                     </div>
                                     <h3>
-                                        <a>Accepted papers will be published in the SCEECS 2024
+                                        <a>Accepted papers will be published in the SCEECS 2025
                                             Conference Proceedings and submitted to IEEE Xplore.</a>
                                     </h3>
                                 </div>
@@ -667,12 +666,12 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
 
                     <div class="title-box">
                         <div class="title">A flagship conference by IEEE-MSB</div>
-                        <h2>SCEECS 2024</h2>
+                        <h2>SCEECS 2025</h2>
                     </div>
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
+                            <!-- <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
                         </div>
                     </div>
                 </div>
@@ -742,7 +741,7 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
                     <div class="copyright">
                         <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
                         <a href="http://www.manit.ac.in/">MANIT</a> |
-                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2024.
+                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2025.
                         All rights reserved.
                     </div>
                 </div>
