--- a/guidelines2.html
+++ b/guidelines2.html
@@ -403,7 +403,7 @@
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
+                            <!-- <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
                         </div>
                     </div>
 
