showing call for paper data

--- a/speaker.html
+++ b/speaker.html
@@ -153,7 +153,7 @@
     <!--End Page Title-->
 
     <!-- Speaker Section Five -->
-    <section class="speaker-section-five">
+    <section class="speaker-section-five" style="display: none;">
       <div class="auto-container">
         <!-- Sec Title -->
         <div class="sec-title centered">
@@ -319,7 +319,37 @@
           <div class="separator"></div>
         </div>
         <div class="row clearfix">
-
+          
+          <div class="speaker-block-two style-two col-lg-3 col-md-6 col-sm-12">
+            <div class="inner-box">
+              <div class="dots-one"></div>
+              <div class="dots-two"></div>
+              <div class="image">
+                <img src="images/gl/love_babbar.jpg" alt="" />
+              </div>
+              <div class="lower-content">
+                <h3>
+                  <a href="https://www.linkedin.com/in/love-babbar-38ab2887/?originalSubdomain=in" target="_blank">Love Babbar</a>
+                </h3>
+                <div class="designation">Founder of Codehelp</div>
+              </div>
+            </div>
+          </div>
+          <div class="speaker-block-two style-two col-lg-3 col-md-6 col-sm-12">
+            <div class="inner-box">
+              <div class="dots-one"></div>
+              <div class="dots-two"></div>
+              <div class="image">
+                <img src="images/gl/lakshya_kumar.jpeg" alt="" />
+              </div>
+              <div class="lower-content">
+                <h3>
+                  <a href="https://www.linkedin.com/in/lakshayk12/?originalSubdomain=in" target="_blank">Lakshya Kumar</a>
+                </h3>
+                <div class="designation">Instructor at Codehelp</div>
+              </div>
+            </div>
+          </div>
           <div class="speaker-block-two style-two col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="dots-one"></div>
