--- a/index.html
+++ b/index.html
@@ -22,6 +22,39 @@
 </head>
 <style>
 
+  /* style for call for paper data */
+    @media screen and (min-width:1023px) {
+        .specialBox{
+            right: -399px !important;
+        /* border: 2px solid; */
+        padding-left: 2px;
+        width: 608px;
+        }
+        .spcialDottRegistration{
+            right: -10px !important; 
+        }
+        .spcialDottReview{
+            right: -85px !important;
+        }
+        .specialBoxCameraReady{
+            left: -420px !important;
+        }
+        .paperPresentationBox{
+            right: -348px !important;
+        }
+        .publishBox{
+            left: -277px !important; 
+        }
+        .reviewBox{
+            left: -272px !important;
+        }
+    }
+    @media screen and (max-width:1023px) {
+        .specialBoxCameraReady{
+            right: -5px !important;
+        }
+    }
+
   /* Css for popUPs */
   #toggle{
        cursor: pointer;
@@ -1097,6 +1130,140 @@
           </section>
 
 
+    <!--schedule -->
+    <section class="programs-section style-two">
+      <div class="auto-container">
+          <!-- Sec Title -->
+          <div class="sec-title centered">
+              <div class="title">SCEECS'25 Call For Paper</div>
+              <h2>How it Works</h2>
+              <div class="separator"></div>
+          </div>
+          <div class="inner-container">
+              <!-- Programs Block -->
+              <div class="programs-block">
+                  <div class="inner-block clearfix">
+                      <div class="content col-lg-6 col-md-12 col-sm-12">
+                          <div class="content-inner">
+                              <!-- Program Info -->
+                              <!-- added its media query in top of the file -->
+                              <div class="program-info">
+                                  REGISTRATION STARTED<span class="time">WILL BE INFORMED</span><span class="dott spcialDottRegistration"></span>
+                              </div>
+                              <h3><a>Get registered on Microsoft CMT.</a></h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Programs Block -->
+              <div class="programs-block style-two">
+                  <div class="inner-block clearfix">
+                      <div class="content col-lg-6 col-md-12 col-sm-12">
+                          <div class="content-inner">
+                              <!-- Program Info -->
+                              <div class="program-info">
+                                 SUBMIT PAPER<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                              </div>
+                              <h3><a>Submit your paper through Microsoft CMT.</a></h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Programs Block -->
+              <div class="programs-block">
+                  <div class="inner-block clearfix">
+                      <div class="content col-lg-6 col-md-12 col-sm-12 " >
+                          <div class="content-inner" >
+                              <!-- Program Info -->
+                              <div class="program-info reviewBox" style="padding: 0 4px;">
+                                  REVIEW<span class="time">WILL BE INFORMED</span>
+                                  <span class="dott spcialDottReview"></span>
+                              </div>
+                              <h3><a>Paper is blind reviewed by experts.</a></h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Programs Block -->
+              <div class="programs-block style-two">
+                  <div class="inner-block clearfix">
+                      <div class="content col-lg-6 col-md-12 col-sm-12">
+                          <div class="content-inner">
+                              <!-- Program Info -->
+                              <!-- its media queries is on the top of the page -->
+                              <div class="program-info specialBox"  >
+                                  Acceptance Notification<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                              </div>
+                              <h3><a>Accepted papers will be notified through email.</a></h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Programs Block -->
+              <div class="programs-block">
+                  <div class="inner-block clearfix">
+                      <div class="content col-lg-6 col-md-12 col-sm-12">
+                          <div class="content-inner">
+                              <!-- Program Info -->
+                              <!-- added its media query in top of the file -->
+                              <div class="program-info specialBoxCameraReady">
+                                  Camera Ready Submissions<span class="time">WILL BE INFORMED</span><span class="dott" ></span>
+                              </div>
+                              <h3><a>Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Programs Block -->
+              <div class="programs-block style-two">
+                  <div class="inner-block clearfix">
+                      <div class="content col-lg-6 col-md-12 col-sm-12">
+                          <div class="content-inner">
+                              <!-- Program Info -->
+                              <!-- its media queries is on the top of the page -->
+                              <div class="program-info paperPresentationBox"  >
+                                  Paper Presentation<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                              </div>
+                              <h3><a>Accepted Papers will be presented in conference in hybrid mode.</a></h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              
+              <!-- Programs Block -->
+              <div class="programs-block">
+                  <div class="inner-block clearfix">
+                      <div class="content col-lg-6 col-md-12 col-sm-12">
+                          <div class="content-inner">
+                              <!-- Program Info -->
+                              <!-- its media queries is on the top of the page -->
+                              <div class="program-info publishBox">
+                                  PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                              </div>
+                              <h3>
+                                  <a>Accepted papers will be published in the SCEECS 2025
+                                      Conference Proceedings and submitted to IEEE Xplore.</a>
+                              </h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="btn-box text-center">
+              <a href="https://journals.ieeeauthorcenter.ieee.org/submit-your-article-for-peer-review/the-ieee-article-submission-process/"
+                  class="theme-btn btn-style-one">get More Details</a>
+          </div>
+      </div>
+      <div class="side-img">
+          <img src="images/resource/id-card.png" alt="" />
+      </div>
+  </section>
 
     <!-- <section id="check" class="news-section">
       <div class="auto-container">
