shifted number of papers review block from speaker file to index file

--- a/speaker.html
+++ b/speaker.html
@@ -234,80 +234,7 @@
     </section>
     <!-- End Speaker Section Two -->
 
-    <!-- Counter Section -->
-    <section class="counter-section-two" style="background-image: url(images/background/7.jpg)">
-      <div class="auto-container">
-        <!-- Fact Counter -->
-        <div class="fact-counter style-two">
-          <div class="row clearfix">
-            <!--Column-->
-            <div class="column counter-column col-lg-3 col-md-6 col-sm-12">
-              <div class="inner">
-                <div class="content">
-                  <div class="count-outer count-box">
-                    <span class="count-text" data-speed="2000" data-stop="2">0</span>
-                  </div>
-                  <h4 class="counter-title">
-                    Days
-                  </h4>
-                  <div class="separator"></div>
-                </div>
-              </div>
-            </div>
-
-            <!--Column-->
-            <div class="column counter-column col-lg-3 col-md-6 col-sm-12">
-              <div class="inner">
-                <div class="content">
-                  <div class="count-outer count-box">
-                    <span class="count-text" data-speed="2000" data-stop="3">0</span>
-                  </div>
-                  <h4 class="counter-title">
-                    Conferences
-                  </h4>
-                  <div class="separator"></div>
-                </div>
-              </div>
-            </div>
-
-            <!--Column-->
-            <div class="column counter-column col-lg-3 col-md-6 col-sm-12">
-              <div class="inner">
-                <div class="content">
-                  <div class="count-outer count-box alternate">
-                    <span class="count-text" data-speed="2000" data-stop="2">0</span>
-                  </div>
-                  <h4 class="counter-title">
-                    Guest <br>
-                    Lecturers
-                  </h4>
-                  <div class="separator"></div>
-                </div>
-              </div>
-            </div>
-
-            <!--Column-->
-            <div class="column counter-column col-lg-3 col-md-6 col-sm-12">
-              <div class="inner">
-                <div class="content">
-                  <div class="count-outer count-box">
-                    <span class="count-text" data-speed="2500" data-stop="250">0</span>
-                  </div>
-                  <h4 class="counter-title">
-                    Papers <br />
-                    Reviewed
-                  </h4>
-                  <div class="separator"></div>
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Counter Section -->
+<!-- number of paper submission -->
 
     <!-- Speaker Section Two -->
     <section class="speaker-section-two">
