--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <!-- End Main Header -->
 
     <!-- Banner Section -->
-    <section class="banner-section" style="background-image: url(./images/loveBabbar.jpg)">
+    <section class="banner-section" style="background-image: url(./images/conference.jpg); background-position: 0px -350px">
       <div class="banner-icons parallax-scene-1">
         <!-- Icon One -->
         <div data-depth="0.20" class="icon icon-one parallax-layer">
