--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
        padding-top: 8px;
        justify-content: center;
    }
+   /* @media only screen and (max-width: 1300px){
+      .banner-section{
+        background-position: right 50% top 210% !important;
+      }
+   } */
    @media only screen and (max-width: 1200px){
        #disc{
            font-size: 1rem ;
@@ -369,7 +374,7 @@
     <!-- End Main Header -->
 
     <!-- Banner Section -->
-    <section class="banner-section" style="background-image: url(./images/conference.jpg); background-position: 0px -350px">
+    <section class="banner-section" style="background-image: url(./images/conference.jpg); background-position: right 50% top 120% ;">
       <div class="banner-icons parallax-scene-1">
         <!-- Icon One -->
         <div data-depth="0.20" class="icon icon-one parallax-layer">
