--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
             right: -5px !important;
         }
     }
+    /* @media screen and (max-width:1450px) {
+        .banner-section{
+          background-position: right 50% top 80vw !important;
+        }
+    } */
+    @media screen and (max-width:1200px) {
+      .banner-section{
+        background-position: right 50% top 70vw !important;
+      }
+    }
+    @media screen and (max-width:860px) {
+        .banner-section{
+          background-position: right 50% top 120% !important;
+        }
+    }
+    @media screen and (max-width:800px) {
+        .banner-section{
+          background-position: right 50% top -70px !important;
+        }
+    }
 
   /* Css for popUPs */
   #toggle{
@@ -374,7 +394,7 @@
     <!-- End Main Header -->
 
     <!-- Banner Section -->
-    <section class="banner-section" style="background-image: url(./images/conference.jpg); background-position: right 50% top 120% ;">
+    <section class="banner-section" style="background-image: url(./images/conference.jpg); background-position: right 50% top 60vw ;">
       <div class="banner-icons parallax-scene-1">
         <!-- Icon One -->
         <div data-depth="0.20" class="icon icon-one parallax-layer">
